<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/feastNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/feastNameText"
                android:textColor="#000000"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/dietNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/feastNameView"
                android:inputType="text"
                android:textColor="#000000"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/menuTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/menuText"
                android:textColor="#000000"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/menuEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/menuView"
                android:inputType="text"
                android:textColor="#000000"
                android:typeface="monospace" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/pickDayTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pickDayTextView"
                android:textColor="#000000"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/dateEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dateEditText"
                android:inputType="text"
                android:textColor="#000000"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/pickTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickTimeTextView"
                android:textColor="#000000"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/timeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/timeEditText"
                android:inputType="text"
                android:textColor="#000000"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical" >

            <Button
                android:id="@+id/editDietChartButton"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:background="#03A9F4"
                android:onClick="createDiet"
                android:text="@string/editDietTextView"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>