<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp" >

        <ImageView
            android:id="@+id/ivTakePhoto"
            android:layout_width="259dp"
            android:layout_height="0dp"
            android:layout_weight="0.46"
            android:contentDescription="@string/capturedImage"
            android:src="@drawable/abc_ab_share_pack_holo_dark" />

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#03A9F4"
            android:padding="14dp"
            android:text="@string/takePresciptionPhoto"
            android:textColor="#ffffff"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/doctorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/doctorTextView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Spinner
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/doctorsName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#3399FF" >
        </Spinner>

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dateTextView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dateEditText"
            android:inputType="date"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/purposeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/purposeTextView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/purposeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/purposeEditText"
            android:inputType="textMultiLine"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#03A9F4"
            android:padding="14dp"
            android:text="@string/buttonSubmit"
            android:textColor="#ffffff"
            android:typeface="monospace" />
    </LinearLayout>

</ScrollView>