<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewHealthTips1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/heathTips1"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textViewHealthTips2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/glass"
            android:drawableRight="@drawable/glass"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/healthTips2"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textViewHealthTips3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.39"
            android:drawableEnd="@drawable/gmo"
            android:drawableRight="@drawable/gmo"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/healthTips3"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textViewHealthTips4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/carrot"
            android:drawableRight="@drawable/carrot"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/healthTips4"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textViewHealthTips5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/healthTips5"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textViewHealthTips6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/sun"
            android:drawableRight="@drawable/sun"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/healthTips6"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textViewHealthTips7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/sleep"
            android:drawableRight="@drawable/sleep"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/healthTips7"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textViewHealthTips8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/healthTips8"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

</ScrollView>