<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/doctorNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/vaccineText"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/specialityTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:gravity="center_vertical"
        android:text="@string/dateTextView"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/chamberTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/vaccineStatusTextView"
        android:textColor="#000000"
        android:textSize="20sp" />

</LinearLayout>