<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tvPhone"
                android:textColor="#000000"
                android:textSize="15sp"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/phoneEditText"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:inputType="phone"
                android:textColor="#000000"
                android:textSize="15sp"
                android:typeface="monospace" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="#03A9F4"
            android:text="@string/buttonSubmit"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:typeface="monospace"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/hint" />

    </LinearLayout>

</ScrollView>